fix width overflowing

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    width: 800px;
+    min-width: 800px;
     min-height: 500px;
 }
 
